--- a/vue/package.json
+++ b/vue/package.json
@@ -18,10 +18,13 @@
     "ant-design-vue": "^3.1.0-rc.6",
     "axios": "^0.26.0",
     "element-plus": "^2.3.6",
+    "monaco-editor": "^0.40.0",
+    "monaco-editor-webpack-plugin": "^7.0.0",
     "vue": "^3.2.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "sass": "^1.63.6",
     "typescript": "^4.4.3",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.6.4",
